2013-10-03 Aurelien Degremont <aurelien.degremont@cea.fr>
	* Fix bad quota tuning options (ticket #148).
	* tuning.conf is also copied when installing (ticket #53).

2013-09-27 Aurelien Degremont <aurelien.degremont@cea.fr>
	* Similar error messages are grouped (ticket #103).
	* Supplementary path for external commands is configurable (ticket #12).

2013-09-24 Aurelien Degremont <aurelien.degremont@cea.fr>
	* -t option supports 'client' option (ticket #164).
	* Fix message output in verbose mode (ticket #163).

2013-09-02 Aurelien Degremont <aurelien.degremont@cea.fr>
	* tuning.conf supports 'router' as node type (ticket #96).
	* Remove code managing FS state in backend (ticket #161).
	* Allow to unregister a FS even with error (ticket #125).

2013-08-29 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Always return an error when format, fsck, tunefs or execute
	failed (ticket #82).
	* umount/mount clients on update only when needed (ticket #152).

2013-08-28 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Clean handling of remote shine output (ticket #25).

2013-08-26 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Automatically load and unload modules when needed (ticket #19).

2013-08-11 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix exception when syslog is not available (ticket #160).

2013-07-31 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Supports Lustre 2.4 (ticket #158).

2013-06-24 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Improve mount/umount messages (ticket #141).

2013-06-07 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fsck could be run with -n option (ticket #151).

2013-02-27 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Improve table title display with wide data (ticket #157).

2013-02-26 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Documentation for -L flag (ticket #157).

2012-12-21 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Special fields could be used with -o option. (ticket #153)